--- a/Log4j_ADC.kv
+++ b/Log4j_ADC.kv
@@ -52,7 +52,7 @@ WindowManager:
         #text field for ADC IP
         MDTextField:
             id: ns_ip
-            text: "192.168.176.107"
+            text: ""
             hint_text: "Netscaler IP"
             icon_right: "ip-network"
             size_hint_x: None
@@ -67,7 +67,7 @@ WindowManager:
         MDTextField:
             id: ns_username
             hint_text: "Username"
-            text: "nsroot"
+            text: ""
             helper_text: "Hopefully not nsroot ;)"
             helper_text_mode: "on_focus"
             icon_right: "account"
@@ -81,7 +81,7 @@ WindowManager:
         #Text field for password
         MDTextField:
             id: ns_password
-            text: "nsroot1"
+            text: ""
             hint_text: "Password"
             icon_right: "eye-off"
             size_hint_x: None
@@ -173,15 +173,17 @@ WindowManager:
                     on_press:
                         root.MadsRegexPurge()
 
-               # TwoLineAvatarListItem:
-                    #text: "Enable IP Reputation"
-                    #secondary_text: "Only works on Premium Licenses"
-                   # on_press:
-                    #    root.Enable_IP_Reputation()
+                TwoLineAvatarListItem:
+                    text: "Enable IP Reputation"
+                    secondary_text: "Globally bound malicious IP blocking"
+                    on_press:
+                        root.Enable_IP_Reputation()
 
-               # TwoLineAvatarListItem:
-                   # text: "Disable IP Reputation"
-                  #  secondary_text: "Only works on Premium Licenses"
+                TwoLineAvatarListItem:
+                    text: "Disable IP Reputation"
+                    secondary_text: "Purge  bound malicious IP blocking settings"
+                    on_press:
+                        root.Disable_IP_Reputation()
 
 
 
